# azure-tools

./: README.md  pyproject.toml
azure_tools/: __main__.py  app.py  copy_files.py  functions.py  list_files.py
